# bank-management

./: Cargo.toml  LICENSE  README.md
public/static/: account-change.js  account-query.js  choice-issue.js  json-form.js  query.js  sidebar.css  stats.js
sql/: all.sql  check_stat.inc.sql  data.sql  save_stat.inc.sql  schema.sql  sp.sql  trigger.sql  views.sql
src/: error.rs  main.rs  route.rs  types.rs
src/action/: account.rs  customer.rs  loan.rs  mod.rs
templates/: 404.html  base.html  stats.html  with-choices.html
templates/account/: add.html  change.html  del.html  query.html
templates/customer/: add.html  change.html  del.html  query.html
templates/loan/: add.html  del.html  issue.html  query.html
templates/stats/: check.html  save.html
